testing SPI master/slave comm

--- a/Firmware/Makefile
+++ b/Firmware/Makefile
@@ -7,5 +7,11 @@ LEDStuff: LEDStuff.o
 LEDStuff.o: LEDStuff.c LEDStuff.h
 	avr-gcc -Os -DF_CPU=$(F_CPU) -mmcu=$(MCU) -c -o LEDStuff.o LEDStuff.c
 
+spitest: spitest.o
+	avr-gcc -mmcu=$(MCU) spitest.o -o spitest
+
+spitest.o: spitest.c
+	avr-gcc -Os -DF_CPU=$(F_CPU) -mmcu=$(MCU) -c -o spitest.o spitest.c
+
 clean:
-	rm *.o LEDStuff
+	rm *.o LEDStuff spitest
